kubernetes/gateway/filebrowser-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser-httproute
  namespace: media
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - filebrowser.homelab.lan.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: filebrowser-service
          port: 80
