kubernetes/gateway/qbittorrent-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-httproute
  namespace: media
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - downloads.homelab.lan.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent-service
          port: 8080
