kubernetes/gateway/radarr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - radarr.homelab.lan.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-radarr-outpost
          port: 9000
