kubernetes/gateway/sonarr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-httproute
  namespace: media
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - sonarr.homelab.lan.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-service
          port: 8989
